# cmake_example

1/: CMakeLists.txt
1/helloworld/: helloworld.h
2/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt
3/helloworld/: helloworld.cpp
3/test/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt
4/helloworld/: CMakeLists.txt
4/test/: CMakeLists.txt  main.cpp
4/test1/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt
5/cmake/: GroupSources.cmake
5/test/: CMakeLists.txt
